# PRIDICT2

./: .gitignore  pyproject.toml
pridict/: __init__.py
pridict/pridictv2/: __init__.py  dataset.py
pridict/rnn/: __init__.py
